FAC and Contact Changed

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ http://ignacioprados.vercel.app
     <!-- End of menu icon toggler -->
 
     <!-- Begin of logo/brand -->
-    <a class="navbar-brand" href="">
+    <a class="navbar-brand" href="https://www.instagram.com/llanosecolodge/" target="_blank">
       <span class="logo">
         <img class="light-logo" src="img/logo.png" alt="Logo">
       </span>
@@ -137,7 +137,10 @@ http://ignacioprados.vercel.app
             <a class="nav-link" href="#clientes">Clientes y Reseñas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">FAQ y Contacto</a>
+            <a class="nav-link" href="#faq">Preguntas Frecuentes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contacto</a>
           </li>
         </ul>
       </nav>
@@ -665,14 +668,14 @@ http://ignacioprados.vercel.app
         <div class="title-desc">
           <div class="anim-2">
             <h2 class="display-4 display-title">Contacto</h2>
-            <p>Si tenes dudas o preguntas sobre la estadía o el lugar, deseas reservar o consultar fechas disponibles, no dudes en contactarnos. Estamos para ayudarte a terner las mejores vacaciones de tu vida!</p>
+            <p>Si tenes dudas o preguntas sobre la estadía o el lugar, deseas reservar o consultar fechas disponibles, no dudes en contactarnos. Estamos para ayudarte a tener las mejores vacaciones de tu vida. Nos vemos pronto!</p>
           </div>
           <div class="address-container anim-3">
 
             <div class="row">
               <div class="col-12 col-md-12 col-lg-12">
-                <p><a href="mailto:llanosecolodge@gmail.com">llanosecolodge@gmail.com</a></p>
-                <p>+542901404668</p>
+                <p class="mail"> <i class="fa fa-envelope"></i>⠀<a href="mailto:llanosecolodge@gmail.com">llanosecolodge@gmail.com</a></p>
+                <p style="font-weight: bold;"> <i class="fa fa-phone"></i>⠀+542901404668</p>
                 
 
                 <div class="icons icons-margin">
@@ -702,7 +705,7 @@ http://ignacioprados.vercel.app
               required>
             </div>
             <div class="form-group no-border">
-              <textarea id="mes-text" placeholder="Message ..." name="Mensaje" class="form-control form-control-outline thick form-success-clean"
+              <textarea id="mes-text" placeholder="Mensaje ..." name="message" class="form-control form-control-outline thick form-success-clean"
               required></textarea>
 
               <div>
