Gallery Section Added

--- a/index.html
+++ b/index.html
@@ -131,13 +131,16 @@ http://ignacioprados.vercel.app
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#info">Información</a>
+            <a class="nav-link" href="#info">Principal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#clientes">Clientes y Reseñas</a>
+            <a class="nav-link" href="#clientes">Clientes </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#faq">Preguntas Frecuentes</a>
+            <a class="nav-link" href="#galeria">Galería</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#faq">FAQ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contacto</a>
@@ -482,92 +485,104 @@ http://ignacioprados.vercel.app
 
 
 
-    <!-- Begin of register/login/signin section -->
-    <div class="section section-register fp-auto-height-responsive " data-section="register">
-      <!-- section cover -->
-      <div class="section-cover-full bg-img" data-image-src="./img/sections/register.png">
-      </div>
+     <!-- Begin of list projects section -->
+     <div class="section section-list-feature fp-auto-height-responsive " data-section="galeria">
 
       <!-- Begin of section wrapper -->
       <div class="section-wrapper fullwidth with-margin">
-
         <!-- content -->
         <div class="section-content anim">
 
-          <div class="row">
-
-            <div class="col-12 col-md-12 col-lg-5">
-              <!-- Registration form container-->
-              <form class="send_email_form form-container form-container-transparent form-container-white"
-              method="post" action="ajaxserver/serverfile.php">
-                <div class="form-desc">
-                  <h2 class="display-4 display-title  anim-2">Subscribe</h2>
-                  <p class="invite  anim-3">Don't miss any new opportunity, Hurry up! register now :</p>
-                </div>
-                <div class="form-input  anim-4">
-                  <div class="form-group form-success-gone">
-                    <label for="reg-email">Email</label>
-                    <input id="reg-email" name="email" class="form-control-line form-control-white" type="email"
-                    required placeholder="your@email.address" data-validation-type="email"
-                    />
-                  </div>
-                  <div class="form-group mb-0">
-                    <div>
-                      <p class="email-ok invisible form-text-feedback form-success-visible">Your email has been registred, thank you.</p>
-                    </div>
-
-                    <div class="btns-action anim-3">
-                      <button id="submit-email" name="submit_email" class="btn btn-circicon btn-primary form-success-gone">
-                        <span class="icon">
-                          <i class="ion ion-checkmark"></i>
-                        </span>
-                        <span class="text">Subscribe</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </form>
+          <!-- project list -->
+          <div class="project-list grid-2 grid-md-3 grid-lg-6 anim-list">
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample9.jpg" alt="An image">
+              </div>
             </div>
-          </div>
-        </div>
-        <!-- end of content -->
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample11.jpg" alt="An image">
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample13.jpg" alt="An image">
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample12.jpg" alt="An image">
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample15.jpg" alt="An image">
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample10.jpg" alt="An image">
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample14.jpg" alt="An image">
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample16.jpg" alt="An image">
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample17.jpg" alt="An image">
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample18.jpg" alt="An image">
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample19.jpg" alt="An image">
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img foto">
+                <img class="" src="img/items/img-sample20.jpg" alt="An image">
+              </div>
+            </div>
 
-        <!-- aside footer -->
-        <div class="section-aside aside-bottom small-relative">
-          <div class="text-left text-md-right">
-            <p>Stay updated. Follow us on social media</p>
-          </div>
-          <div class="icons icons-margin">
-            <a class="icon-btn" href="#">
-              <i class="icon fa fa-instagram"></i>
-            </a>
-            <a class="icon-btn" href="#">
-              <i class="icon fa fa-youtube"></i>
-            </a>
-            <a class="icon-btn" href="#">
-              <i class="icon fa fa-facebook"></i>
-            </a>
-            <a class="icon-btn" href="#">
-              <i class="icon fa fa-pinterest"></i>
-            </a>
-            <a class="icon-btn" href="#">
-              <i class="icon fa fa-twitter"></i>
-            </a>
           </div>
         </div>
+
 
       </div>
-      <!-- End of section wrapper -->
-
-      <!-- Arrows scroll down/up -->
-      <footer class="section-footer scrolldown">
-        <a class="down">
-          <span class="icon"></span>
-          <span class="txt">Contact</span>
-        </a>
-      </footer>
+  <!-- End of section wrapper -->
+          <!-- Arrows scroll down/up -->
+          <footer class="section-footer scrolldown">
+            <a class="down">
+              <span class="icon"></span>
+              <span class="txt">Services</span>
+            </a>
+          </footer>
     </div>
-    <!-- End of register/login/signin section -->
+    <!-- End of list projects section -->
 
     <!-- Begin of FAQ section -->
     <div class=" section fp-auto-height-responsive" data-section="faq">
