--- a/index.html
+++ b/index.html
@@ -242,11 +242,6 @@ http://ignacioprados.vercel.app
                 <span class="text">Siguiente</span>
                 <span class="icon arrow-right"></span>
               </a>
-              <div class="icons">
-                <a class="icon-btn" href="https://www.instagram.com/llanosecolodge/" target="_blank">
-                  <i class="icon fa fa-instagram"></i>
-                </a>
-              </div>
             </div>
           </div>
         </div>
@@ -266,11 +261,6 @@ http://ignacioprados.vercel.app
                 <span class="text">Siguiente</span>
                 <span class="icon arrow-right"></span>
               </a>
-              <div class="icons">
-                <a class="icon-btn" href="https://www.instagram.com/llanosecolodge/" target="_blank">
-                  <i class="icon fa fa-instagram"></i>
-                </a>
-              </div>
             </div>
           </div>
         </div>
@@ -290,11 +280,6 @@ http://ignacioprados.vercel.app
                 <span class="text">Siguiente</span>
                 <span class="icon arrow-right"></span>
               </a>
-              <div class="icons">
-                <a class="icon-btn" href="https://www.instagram.com/llanosecolodge/" target="_blank">
-                  <i class="icon fa fa-instagram"></i>
-                </a>
-              </div>
             </div>
           </div>
         </div>
@@ -314,11 +299,6 @@ http://ignacioprados.vercel.app
                 <span class="text">Inicio</span>
                 <span class="icon arrow-right"></span>
               </a>
-              <div class="icons">
-                <a class="icon-btn" href="https://www.instagram.com/llanosecolodge/" target="_blank">
-                  <i class="icon fa fa-instagram"></i>
-                </a>
-              </div>
             </div>
           </div>
         </div>
@@ -565,6 +545,11 @@ http://ignacioprados.vercel.app
             <div class="item media media-project">
               <div class="media-img foto">
                 <img class="" src="img/items/img-sample20.jpg" alt="An image">
+              </div>
+              <div class="media-footer">
+                <a class=" fotos btn btn-transp-arrow btn-primary" href="https://www.instagram.com/llanosecolodge/" target="_blank">
+                  <span class="text">+ 21 Fotos</span>
+                </a>
               </div>
             </div>
 
