FAQ updated - Google Maps Added

--- a/index.html
+++ b/index.html
@@ -472,13 +472,17 @@ http://ignacioprados.vercel.app
       <div class="section-wrapper fullwidth with-margin">
         <!-- content -->
         <div class="section-content anim">
-
           <!-- project list -->
           <div class="project-list grid-2 grid-md-3 grid-lg-6 anim-list">
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img foto">
-                <img class="" src="img/items/img-sample9.jpg" alt="An image">
+                <img class="" src="img/items/img-sample12.jpg" alt="An image">
+              </div>
+              <div class="media-footer">
+                <a class=" fotos btn btn-transp-arrow btn-primary" href="https://www.instagram.com/llanosecolodge/" target="_blank">
+                  <span class="text">@llanosecolodge</span>
+                </a>
               </div>
             </div>
             <!-- an item -->
@@ -496,7 +500,7 @@ http://ignacioprados.vercel.app
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img foto">
-                <img class="" src="img/items/img-sample12.jpg" alt="An image">
+                <img class="" src="img/items/img-sample9.jpg" alt="An image">
               </div>
             </div>
             <!-- an item -->
@@ -582,13 +586,13 @@ http://ignacioprados.vercel.app
             <div class="panel-heading p-3 mb-3" role="tab" id="heading0">
             <h3 class="panel-title">
               <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse0" aria-expanded="true" aria-controls="collapse0">
-              What are the benefits of Solodev CMS?
+                ¿Cuales son los Precios? - Pagos
               </a>
             </h3>
             </div>
             <div id="collapse0" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading0">
             <div class="panel-body px-3 mb-4">
-              <p>With Solodev CMS, you and your visitors will benefit from a finely-tuned technology stack that drives the highest levels of site performance</p>
+              <p>Para poder obtener un precio final, tiene que consultar en algún medio de contacto (Mail - Whatsapp - Instagram).</p>
             </div>
             </div>
           </div>
@@ -597,13 +601,13 @@ http://ignacioprados.vercel.app
             <div class="panel-heading p-3 mb-3" role="tab" id="heading1">
             <h3 class="panel-title">
               <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="true" aria-controls="collapse1">
-              How easy is it to build a website with Solodev CMS?
+                ¿Qué Actividades se pueden realizar? - Estadía
               </a>
             </h3>
             </div>
             <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">
             <div class="panel-body px-3 mb-4">
-              <p>Building a website is extremely easy. With a working knowledge of HTML and CSS you will be able to have a site up and running in no time.</p>
+              <p>Trineos con Perros - Motos de Nieve - Vehículos 4x4 - Trekkings - Esquí de Fondo - etc.</p>
             </div>
             </div>
           </div>
@@ -612,13 +616,13 @@ http://ignacioprados.vercel.app
             <div class="panel-heading p-3 mb-3" role="tab" id="heading2">
             <h3 class="panel-title">
               <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="true" aria-controls="collapse2">
-              What is the uptime for Solodev CMS?
+                ¿Cuál es la Capacidad Máxima de los Domos? - Estadía
               </a>
             </h3>
             </div>
             <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
             <div class="panel-body px-3 mb-4">
-              <p>Using Amazon AWS technology which is an industry leader for reliability you will be able to experience an uptime in the vicinity of 99.95%.</p>
+              <p>Las habitaciones están preparadas para alojar hasta 3 personas (Tiene baño privado) .</p>
             </div>
             </div>
           </div>
@@ -627,13 +631,14 @@ http://ignacioprados.vercel.app
             <div class="panel-heading p-3 mb-3" role="tab" id="heading3">
             <h3 class="panel-title">
               <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="true" aria-controls="collapse3">
-              Can Solodev CMS handle multiple websites for my company?
+                ¿Cómo se llega al Camping? - Ubicación
               </a>
             </h3>
             </div>
             <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3">
             <div class="panel-body px-3 mb-4">
-              <p>Yes, Solodev CMS is built to handle the needs of any size company. With our Multi-Site Management, you will be able to easily manage all.</p>
+              <p>Para llegar, siga las instrucciones de Google Maps, yendo por la Ruta Nacional Nº3.</p>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18438.94929394593!2d-68.09002813158665!3d-54.71192879861306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbc4c114ebe4595e9%3A0x5170f45d74f23797!2sLlanos%20Del%20Castor!5e0!3m2!1ses!2sar!4v1625807375901!5m2!1ses!2sar" width="1024" height="200" style=" border-radius: 25px" allowfullscreen="" loading="lazy"></iframe>
             </div>
             </div>
           </div>
@@ -668,7 +673,7 @@ http://ignacioprados.vercel.app
         <div class="title-desc">
           <div class="anim-2">
             <h2 class="display-4 display-title">Contacto</h2>
-            <p>Si tenes dudas o preguntas sobre la estadía o el lugar, deseas reservar o consultar fechas disponibles, no dudes en contactarnos. Estamos para ayudarte a tener las mejores vacaciones de tu vida. Nos vemos pronto!</p>
+            <p>Si tenés dudas o preguntas sobre la estadía o el lugar, deseas reservar o consultar fechas disponibles, no dudes en contactarnos. Estamos para ayudarte a tener las mejores vacaciones de tu vida. Nos vemos pronto!</p>
           </div>
           <div class="address-container anim-3">
 
