Client Page Skelleton Finished

--- a/index.html
+++ b/index.html
@@ -371,7 +371,50 @@ http://ignacioprados.vercel.app
                         </div>
             <!--         </div> -->
                       </div>
-  
+                      <!-- Counter Client-->
+                      <div id="statistic" class="statistic-section one-page-section">
+                        <div class="container">
+                            <div class="row text-center">
+                                <div class="col-xs-12 col-md-3">
+                                    <div class="counter">
+                                        <i class="fa fa-coffee fa-2x stats-icon"></i>
+                                        <h2 class="timer count-title count-number">999</h2>
+                                        <div class="stats-line-black"></div>
+                                        <p class="stats-text">Coffee Cups</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-md-3">
+                                    <div class="counter">
+                                        <i class="fa fa-code fa-2x stats-icon"></i>
+                                        <h2 class="timer count-title count-number">10000
+                                        </h2>
+                                        <div class="stats-line-black"></div>
+                                        <p class="stats-text">Line Code</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-md-3">
+                                    <div class="counter">
+                                        <i class="fa fa-clock-o fa-2x stats-icon"></i>
+                                        <h2 class="timer count-title count-number">6</h2>
+                                        <div class="stats-line-black"></div>
+                                        <p class="stats-text">Years Experience</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-md-3">
+                                    <div class="counter">
+                                        <i class="fa fa-laptop fa-2x stats-icon"></i>
+                                        <h2 class="timer count-title count-number">12</h2>
+                                        <div class="stats-line-black"></div>
+                                        <p class="stats-text">Project</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                      <!-- End Counter Client-->
+
+
+
           <!-- Arrows scroll down/up -->
           <footer class="section-footer scrolldown">
             <a class="down">
@@ -697,6 +740,9 @@ http://ignacioprados.vercel.app
   <script src="./js/slick/slick.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js" integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js" integrity="sha512-kIRDPWIBoKpF79HJv3xBPQgZKjhxzqMGG2N68svvId45w9vp/hTXoR7cDERYhVEhLJTuSGb/c3+ZHgeQfLm0Hg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha512-Ah5hWYPzDsVHf9i2EejFBFrG2ZAPmpu4ZJtW4MfSgpZacn+M9QHDt+Hd/wL1tEkk1UgbzqepJr6KnhZjFKB+0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- All vendor scripts -->
   <script src="./js/vendor/parallax.min.js"></script>
