--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@ http://ignacioprados.vercel.app
             </div>
             <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
             <div class="panel-body px-3 mb-4">
-              <p>Las habitaciones están preparadas para alojar hasta 3 personas (Tiene baño privado) .</p>
+              <p>Las habitaciones están preparadas para alojar hasta 3 personas (Tienen baño privado).</p>
             </div>
             </div>
           </div>
@@ -631,7 +631,7 @@ http://ignacioprados.vercel.app
         <div class="title-desc">
           <div class="anim-2">
             <h2 class="display-4 display-title">Contacto</h2>
-            <p>Si tenés dudas o preguntas sobre la estadía o el lugar, deseas reservar o consultar fechas disponibles, no dudes en contactarnos. Estamos para ayudarte a tener las mejores vacaciones de tu vida. Nos vemos pronto!</p>
+            <p>Si tenés dudas o preguntas sobre la estadía o el lugar, deseas reservar o consultar fechas disponibles y precios, no dudes en contactarnos. Estamos para ayudarte a tener las mejores vacaciones de tu vida. Nos vemos pronto!</p>
           </div>
           <div class="address-container anim-3">
 
