Gallery Grid Responsive Fixed

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                <!-- content -->
                <div class="section-content anim">
                   <!-- project list -->
-                  <div class="project-list grid-2 grid-md-3 grid-lg-6 anim-list">
+                  <div class="project-list grid-xs-1 grid-md-3 grid-lg-6 anim-list">
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
