Google Maps Fixed

--- a/index.html
+++ b/index.html
@@ -533,9 +533,12 @@
                         </div>
                         <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3">
                            <div class="panel-body px-3 mb-4">
-                              <p>Para llegar, siga las instrucciones de Google Maps, yendo por la Ruta Nacional Nº3.</p>
-                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18438.94929394593!2d-68.09002813158665!3d-54.71192879861306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbc4c114ebe4595e9%3A0x5170f45d74f23797!2sLlanos%20Del%20Castor!5e0!3m2!1ses!2sar!4v1625807375901!5m2!1ses!2sar" width="1024" height="200" style=" border-radius: 25px" allowfullscreen="" loading="lazy"></iframe>
-                           </div>
+                              <p>Para llegar, siga las instrucciones de Google Maps, yendo por la Ruta Nacional Nº3. <span style="font-weight: bold; color: #e0cdbf;">Por favor, cierre el mapa cuando no lo utilice. Gracias!</span>
+                              </p>
+                              <div class="map-responsive">
+                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18438.94929394593!2d-68.09002813158665!3d-54.71192879861306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbc4c114ebe4595e9%3A0x5170f45d74f23797!2sLlanos%20Del%20Castor!5e0!3m2!1ses!2sar!4v1625807375901!5m2!1ses!2sar" width="800" height="600" style=" border-radius: 25px" allowfullscreen="" loading="lazy"></iframe>
+                              </div>
+                          </div>
                         </div>
                      </div>
                   </div>
