--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                <!-- content -->
                <div class="section-content anim">
                   <!-- project list -->
-                  <div class="project-list grid-xs-1 grid-md-3 grid-lg-6 anim-list">
+                  <div class="project-list grid-1 grid-md-3 grid-lg-4 anim-list">
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
@@ -476,7 +476,7 @@
          </div>
          <!-- End of list projects section -->
          <!-- Begin of FAQ section -->
-         <div class=" section fp-auto-height-responsive" data-section="faq">
+         <div class=" section  fp-auto-height-responsive" data-section="faq">
             <div class="section-wrapper fullwidth with-margin  div accordion-section clearfix mt-3" aria-label="Question Accordions" ">
                <div class="container">
                   <h2 class="display-4 display-title">Preguntas Frecuentes</h2>
