Use cdn and Fix Responsive

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
       <link  rel="icon"   href="/img/favicon.png" alt="logo" type="image/png" />
       <!-- Web fonts and Web Icons -->
-      <link rel="stylesheet" href="./fonts/opensans/stylesheet.css">
-      <link rel="stylesheet" href="./fonts/bebas/stylesheet.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="./fonts/ionicons.min.css">
       <link rel="stylesheet" href="./fonts/font-awesome.min.css">
       <!-- Vendor CSS style -->
