Client Testimonial Text Updated

--- a/index.html
+++ b/index.html
@@ -308,17 +308,17 @@
                         <div>
                            <div class="img"><img src="img/items/img-people3.jpg" alt="Persona"></div>
                            <h2 style="font-weight: bold;">Matías Trialari</h2>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                           <p>Me encantó! Una excelente opción para relajarse un par de días y alejarse de la ciudad. Los Domos son muy calentitos y cómodos, perfecto para ir en pareja o de a 3 amigos. Muy buena experiencia que te recomiendo vivir.</p>
                         </div>
                         <div>
                            <div class="img"><img src="img/items/img-people5.jpg" alt="Persona"></div>
                            <h2 style="font-weight: bold;">Martina Rodríguez</h2>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                           <p>Excelente para los adultos y los chicos. Las actividades son muy divertidas, disfrutando de los maravillosos paisajes que nos ofrece Ushuaia. Nos trataron muy bien, lo volvería a repetir.</p>
                         </div>
                         <div>
                            <div class="img"><img src="img/items/img-people6.jpg" alt="Persona"></div>
                            <h2 style="font-weight: bold;">María Sol Vilano</h2>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                           <p>Me encantó! Una excelente opción para relajarse un par de días y alejarse de la ciudad. Los Domos son muy calentitos y cómodos, perfecto para ir en pareja o de a 3 amigos. Muy buena experiencia que te recomiendo vivir.</p>
                         </div>
                      </div>
                   </div>
