--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                      <a class="nav-link" href="#galeria">Galería</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#faq">FAQ</a>
+                     <a class="nav-link" href="#faq">Preguntas</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="#contact">Contacto</a>
