--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- Disable screen scaling-->
       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0">
       <!-- Facebook Meta -->
-      <meta property="og:url" content="your website url here">
+      <meta property="og:url" content="https://llanosecolodge.vercel.app/">
       <meta property="og:title" content="Llanos EcoLodge">
       <meta property="og:description" content="Todas las comodidades de un hotel, combinadas con los aspectos 
       más divertidos y prácticos de un camping by @llanosdelcastorushuaia.">
