menu link fixed

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <nav class="navbar-mainmenu">
                <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                     <a class="nav-link" href="./index.html#home">Inicio
+                     <a class="nav-link" href="#home">Inicio
                      <span class="sr-only">(current)</span>
                      </a>
                   </li>
