CDN implemented and css optimized

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="./fonts/ionicons.min.css">
-      <link rel="stylesheet" href="./fonts/font-awesome.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.0/css/ionicons.min.css" integrity="sha512-JApjWRnfonFeGBY7t4yq8SWr1A6xVYEJgO/UMIYONxaR3C9GETKUg0LharbJncEzJF5Nmiv+Pr5QNulr81LjGQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <!-- Vendor CSS style -->
       <link rel="stylesheet" href="./css/pageloader.css">
       <!-- Uncomment below to load individualy vendor CSS -->
@@ -43,7 +43,7 @@
       <!-- Main CSS files -->
       <link rel="stylesheet" href="./css/main.css">
       <!-- add alt layout here -->
-      <link rel="stylesheet" href="./css/style-default.css">
+
       <script src="./js/vendor/modernizr-2.7.1.min.js"></script>
    </head>
    <body id="menu" class="body-page">
