Text Card Changed

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                      <div class="legend">
                         <h3>Tranquilidad</h3>
                         <h4 class="numberslide">03</h4>
-                        <p>Una estadía para relajarte y desconectarte de todo!</p>
+                        <p>Una experiencia de Glamping sustentable para relajarte y desconectarte de todo!</p>
                         <a class="btn btn-transp-arrow btn-primary" href="#info/3">
                         <span class="text">Siguiente</span>
                         <span class="icon arrow-right"></span>
