--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                      <h4>Enviar Mensaje</h4>
                      <div class="form-container form-container-card">
                         <!-- Message form container -->
-                        <form class="send_message_form message form" method="post" action="https://formspree.io/f/mvovdgrv"
+                        <form class="send_message_form message form" method="post" action="https://formspree.io/f/xvodbzjz"
                            id="message_form">
                            <div class="form-group name">
                               <input id="mes-name" name="name" type="text" placeholder="Nombre" class="form-control form-control-outline thick form-success-clean"
