Tarjetas de Contacto

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                         <h2 class="display-4 display-title">Contacto</h2>
                         <p>Si tenés dudas o preguntas sobre la estadía o el lugar, deseas reservar o consultar fechas disponibles y precios, no dudes en contactarnos. Estamos para ayudarte a tener las mejores vacaciones de tu vida. Nos vemos pronto!</p>
                      </div>
-                     <div class="address-container anim-3">
+               <!--    <div class="address-container anim-3">
                         <div class="row">
                            <div class="col-12 col-md-12 col-lg-12">
                               <p class="mail"> <i class="fa fa-envelope"></i>⠀<a href="mailto:llanosecolodge@gmail.com">llanosecolodge@gmail.com</a></p>
@@ -578,11 +578,34 @@
                         </div>
                      </div>
                   </div>
+
+                --!>
+
+                  <!-- TARJETAS DE CONTACTO -->
+                  <div class="tarjcont">
+                     <a href="mailto:llanosecolodge@gmail.com" class=" tarjeta">
+                           <i class="icon fa fa-envelope tar"></i>
+                           <p class="tar mail">llanosecolodge@gmail.com</p>
+                     </a>
+
+                     <a href="https://api.whatsapp.com/send?phone=+542901404668" target="_blank" class="tarjeta">
+                           <i class="icon fa fa-whatsapp tar"></i>
+                           <p class="tar">+542901404668</p>
+                     </a>
+
+                     <a href="https://www.instagram.com/llanosecolodge/" target="_blank" class="tarjeta">
+                        <i class="icon fa fa-instagram tar"></i>
+                        <p class="tar">@llanosecolodge</p>
+                     </a>
+                  </div>
+
+                  <!-- FORMULARIO DE CONTACTO -->
+         <!--
                   <div class="message-form">
                      <h4>Enviar Mensaje</h4>
                      <div class="form-container form-container-card">
                         <!-- Message form container -->
-                        <form class="send_message_form message form" method="post" action="https://formspree.io/f/xvodbzjz"
+        <!--                <form class="send_message_form message form" method="post" action="https://formspree.io/f/xvodbzjz"
                            id="message_form">
                            <div class="form-group name">
                               <input id="mes-name" name="name" type="text" placeholder="Nombre" class="form-control form-control-outline thick form-success-clean"
